// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportStatement.1 1`] = `
{
  "@": {
    "end": {
      "column": 24,
      "line": 1,
      "offset": 23,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "identifier": {
    "@": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "AnyIdentifier",
    "value": "Foo",
  },
  "kind": "ImportStatement",
  "src": {
    "@": {
      "end": {
        "column": 24,
        "line": 1,
        "offset": 23,
      },
      "start": {
        "column": 17,
        "line": 1,
        "offset": 16,
      },
    },
    "kind": "StringLiteral",
    "value": "./bar",
  },
}
`;

exports[`ImportStatement.1 2`] = `
{
  "@": {
    "end": {
      "column": 24,
      "line": 1,
      "offset": 23,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "Program",
  "statements": [
    {
      "@": {
        "end": {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
        },
        "kind": "AnyIdentifier",
        "value": "Foo",
      },
      "kind": "ImportStatement",
      "src": {
        "@": {
          "end": {
            "column": 24,
            "line": 1,
            "offset": 23,
          },
          "start": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
        },
        "kind": "StringLiteral",
        "value": "./bar",
      },
    },
  ],
}
`;
